# MagickaBBS

./: .gitignore  LICENSE.txt  Makefile  Makefile.freebsd  Makefile.linux  README.md  bbs.c  bbs.h  bbs.ini  bbs_list.c  chat_system.c  doors.c  email.c  file_id.diz  files.c  localmail.ini  lua_glue.c  mail_menu.c  main.c  main_menu.c  s10.ini  settings.c  users.c
Xmodem/: LICENSE  Makefile  checkcrc.c  crc.c  crctab.c  main.c  network.c  receive.c  send.c  seriallog.c  seriallog.h  utils.c  xmodem.h  xmodemr.c  xmodemt.c  zmodem.c  zmodem.h  zmodemdump.c  zmodemr.c  zmodemsys.c  zmodemt.c  zmutil.c
ansis/: bulletin0.ans  doors.ans  issue.ans  mainmenu.ans
ansis_default/: bulletin1.ans  doors.ans  filemenu.ans  goodbye.ans  issue.ans  mailmenu.ans  mainmenu.ans  newuser.ans
config_default/: bbs.ini  doors.ini  filesgen.ini  illusionnet.ini  localmail.ini
jamlib/: Makefile.linux  structrw.c  structrw.h
jamlib-1.4.7/: AUTHORS  ChangeLog  Changes  Makefile.am  Makefile.in  README  aclocal.m4  autogen.sh  config.guess  config.h.in  configure  configure.ac  jamlib.doc  jamlib.qpg.in  ltmain.sh
jamlib-1.4.7/doc/: JAM_AddEmptyMessage.3  JAM_AddMessage.3  JAM_ChangeMsgHeader.3  JAM_ClearMsgHeader.3  JAM_CloseMB.3  JAM_Crc32.3  JAM_CreateMB.3  JAM_DelSubPacket.3  JAM_DeleteMessage.3  JAM_Errno.3  JAM_FindUser.3  JAM_GetMBSize.3  JAM_GetSubfield.3  JAM_GetSubfield_R.3  JAM_LockMB.3  JAM_NewSubPacket.3  JAM_OpenMB.3  JAM_PutSubfield.3  JAM_ReadLastRead.3  JAM_ReadMBHeader.3  JAM_ReadMsgHeader.3  JAM_ReadMsgText.3  JAM_RemoveMB.3  JAM_UnlockMB.3  JAM_WriteLastRead.3  JAM_WriteMBHeader.3  Makefile.am  Makefile.in  jamlib.3
jamlib-1.4.7/include/: Makefile.am  Makefile.in
jamlib-1.4.7/include/jamlib/: Makefile.am  Makefile.in  jam.h
jamlib-1.4.7/src/: Makefile.am  Makefile.in  crc32.c  lastread.c  mbase.c  message.c  structrw.c  structrw.h  subpack.c
jamlib-1.4.7/win32/: Makefile.in
jamlib-1.4.7/win32/jamlib/: Makefile.am  Makefile.in  jamlib.dsp
scripts_examples/: doors.lua  filemenu.lua  login_stanza.lua  mailmenu.lua  mainmenu.lua  taglines.txt
utils/filepost/: Makefile  filepost.c
utils/mgpost/: Makefile  mgpost.c
